# xray-16

./: .gitmodules
src/Layers/: CMakeLists.txt
src/Layers/xrRenderPC_GL/: CMakeLists.txt  xrRender_GL.cpp
src/Layers/xrRenderPC_R1/: CMakeLists.txt  stdafx.h
src/Layers/xrRenderPC_R2/: CMakeLists.txt
src/Layers/xrRenderPC_R4/: CMakeLists.txt
src/Layers/xrRenderVK/: README  main.cpp
src/xrEngine/: EngineAPI.cpp  Render.h
